[rfc 119] Discovery RI: adopted to last API changes